Also count use of embed.

--- a/dreamcoder/domains/grid/viz.ipynb
+++ b/dreamcoder/domains/grid/viz.ipynb
@@ -37,6 +37,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 122,
    "metadata": {},
    "outputs": [
@@ -1351,6 +1358,69 @@
     "        continue\n",
     "    show_trace(start, s)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# counting use of primitives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/output-taskgrammar-iter4-grammarpen.bin\n",
+      "best program Counter({grid_move: 229, grid_left: 100, grid_embed: 68, grid_right: 55})\n",
+      "top5 Counter({grid_move: 1221, grid_left: 641, grid_embed: 405, grid_right: 328, grid_dopendown: 12})\n",
+      "output/output-taskgrammar-iter4-grammarpen_setloc-recog.bin\n",
+      "best program Counter({grid_move: 252, grid_left: 160, grid_setlocation: 63, 2: 52, 1: 44, grid_right: 32, 3: 30})\n",
+      "top5 Counter({grid_move: 1281, grid_left: 840, grid_setlocation: 315, 2: 253, 1: 228, grid_right: 210, 3: 149, grid_dopendown: 50, grid_dopenup: 12, grid_embed: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "def count_primitives(p, *, ct=None):\n",
+    "    if ct is None:\n",
+    "        ct = collections.Counter()\n",
+    "    class Counter(object):\n",
+    "        def invented(self, e): e.body.visit(self)\n",
+    "        def primitive(self, e): ct[e]+=1\n",
+    "        def index(self, e): pass\n",
+    "        def application(self, e): e.f.visit(self); e.x.visit(self)\n",
+    "        def abstraction(self, e): e.body.visit(self)\n",
+    "    p.visit(Counter())\n",
+    "    return ct\n",
+    "\n",
+    "def count_prim():\n",
+    "    for fn in [\n",
+    "        'output/output-taskgrammar-iter4-grammarpen.bin',\n",
+    "        'output/output-taskgrammar-iter4-grammarpen_setloc-recog.bin',\n",
+    "    ]:\n",
+    "        r = joblib.load(fn)\n",
+    "        ct = collections.Counter()\n",
+    "        topct = collections.Counter()\n",
+    "        for task in r['train']:\n",
+    "            es = r['result'].frontiersOverTime[task][-1].entries\n",
+    "            if not es:\n",
+    "                continue\n",
+    "            fe = max(es, key=lambda e: e.logPrior + e.logLikelihood) # get the best\n",
+    "            count_primitives(fe.program, ct=topct)\n",
+    "            for e in es:\n",
+    "                p = e.program\n",
+    "                count_primitives(p, ct=ct)\n",
+    "        print(fn)\n",
+    "        print('best program', topct)\n",
+    "        print('top5', ct)\n",
+    "\n",
+    "count_prim()"
    ]
   },
   {
